# controllers/products.js
@@ -1,6 +1,8 @@
 const Product = require("../models/Product");
 
 const getAllProducts = async (req, res) => {
+  // #swagger.tags = ['Products']
+  // #swagger.description = 'Retrieve all products from the database'
   try {
     const products = await Product.find();
     res.status(200).json(products);
@@ -10,6 +12,8 @@ const getAllProducts = async (req, res) => {
 };
 
 const getSingleProduct = async (req, res) => {
+  // #swagger.tags = ['Products']
+  // #swagger.description = 'Retrieve a single product by its ID'
   try {
     const product = await Product.findById(req.params.id);
     if (!product) return res.status(404).json({ message: "Product not found" });
@@ -20,6 +24,22 @@ const getSingleProduct = async (req, res) => {
 };
 
 const createProduct = async (req, res) => {
+  /*  #swagger.tags = ['Products']
+      #swagger.description = 'Endpoint to create a new bowl or dish'
+      #swagger.parameters['obj'] = {
+          in: 'body',
+          description: 'Product data',
+          schema: {
+              $name: 'Purple Power Bowl',
+              $ingredients: 'Acai, Blueberries, Granola, Almond Butter',
+              $price: 15.90,
+              $image: 'https://images.unsplash.com/photo-1590301157890-4810ed352733',
+              category: 'Premium Bowl',
+              calories: 520,
+              available: true,
+              isVegan: true
+          }
+      } */
   try {
     const product = new Product(req.body);
     const savedProduct = await product.save();
@@ -30,6 +50,16 @@ const createProduct = async (req, res) => {
 };
 
 const updateProduct = async (req, res) => {
+  /*  #swagger.tags = ['Products']
+      #swagger.description = 'Update an existing product by its ID'
+      #swagger.parameters['obj'] = {
+          in: 'body',
+          description: 'Partial or full product data',
+          schema: {
+              price: 16.50,
+              available: false
+          }
+      } */
   try {
     const updatedProduct = await Product.findByIdAndUpdate(req.params.id, req.body, { new: true });
     if (!updatedProduct) return res.status(404).json({ message: "Product not found" });
@@ -40,6 +70,8 @@ const updateProduct = async (req, res) => {
 };
 
 const deleteProduct = async (req, res) => {
+  // #swagger.tags = ['Products']
+  // #swagger.description = 'Delete a product from the database permanently'
   try {
     const deletedProduct = await Product.findByIdAndDelete(req.params.id);
     if (!deletedProduct) return res.status(404).json({ message: "Product not found" });
