# controllers/team.js
@@ -1,6 +1,8 @@
 const Team = require("../models/Team");
 
 const getAllTeamMembers = async (req, res) => {
+  // #swagger.tags = ['Team']
+  // #swagger.description = 'Retrieve all team members'
   try {
     const teamMembers = await Team.find();
     res.status(200).json(teamMembers);
@@ -10,6 +12,8 @@ const getAllTeamMembers = async (req, res) => {
 };
 
 const getSingleTeamMember = async (req, res) => {
+  // #swagger.tags = ['Team']
+  // #swagger.description = 'Retrieve a team member by ID'
   try {
     const teamMember = await Team.findById(req.params.id);
     if (!teamMember) return res.status(404).json({ message: "Team member not found" });
@@ -20,6 +24,21 @@ const getSingleTeamMember = async (req, res) => {
 };
 
 const createTeamMember = async (req, res) => {
+  /*  #swagger.tags = ['Team']
+      #swagger.description = 'Create a new team member'
+      #swagger.parameters['obj'] = {
+          in: 'body',
+          description: 'Team member data',
+          schema: {
+              $name: 'John Doe',
+              $title: 'Chief Acai Officer',
+              $description: 'Acai enthusiast with 10 years of experience',
+              $image: 'https://example.com/john.jpg',
+              role: 'Founder',
+              $email: 'john@purplecream.com',
+              hobbies: ['Surfing', 'Healthy Living']
+          }
+      } */
   try {
     const teamMember = new Team(req.body);
     const savedTeamMember = await teamMember.save();
@@ -30,6 +49,16 @@ const createTeamMember = async (req, res) => {
 };
 
 const updateTeamMember = async (req, res) => {
+  /*  #swagger.tags = ['Team']
+      #swagger.description = 'Update a team member by ID'
+      #swagger.parameters['obj'] = {
+          in: 'body',
+          description: 'Team member data to update',
+          schema: {
+              title: 'CEO',
+              role: 'Management'
+          }
+      } */
   try {
     const updatedTeamMember = await Team.findByIdAndUpdate(req.params.id, req.body, { new: true });
     if (!updatedTeamMember) return res.status(404).json({ message: "Team member not found" });
@@ -40,6 +69,8 @@ const updateTeamMember = async (req, res) => {
 };
 
 const deleteTeamMember = async (req, res) => {
+  // #swagger.tags = ['Team']
+  // #swagger.description = 'Remove a team member from the database'
   try {
     const deletedTeamMember = await Team.findByIdAndDelete(req.params.id);
     if (!deletedTeamMember) return res.status(404).json({ message: "Team member not found" });
